fix spacing top of footer

--- a/src/components/signUp/signUp.module.css
+++ b/src/components/signUp/signUp.module.css
@@ -1,5 +1,4 @@
 .signUp {
-  width: 100vw;
   position: relative;
   background: var(--Dark-Navy);
   color: #fff;
